[package]
name = "AuthenticationPrevsRS"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.6"
sea-orm = {version="1.1.17", features = ["sqlx-postgres","runtime-tokio-native-tls","macros"]}
serde = {version="1.0.228", features=["derive"]}
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres"] }
tokio = {version = "1.48.0", features = ["full", "rt-multi-thread"]}
# sea-orm = {version="^1.1.17", features = ["sqlx-postgres","tokio","macros"]}
